 * Change the Side Bar to meet Material Design update
 * Rewrite the local files browsing, using the network browsing code, which adds
   preparsing, prefetching, async, extensibility and code reuse
 * New album browser view
 * Fix back button behavior on VideoPlayer
 * Improve Material look, Ripple effect on Lollipop
 * Activate the Audio Delay control
 * Fix crashes, focus

JNI:
 * Add a way to capture stdout logs directly

Core:
 * Time stretching is now on by default

TV:
 * Fix recommendations duplication and improve recommendations
 * Fix B button handling and TextViews

Translations:
 * Update of ALL the translations


Changes between 1.2.6 and 1.3.0:
--------------------------------

libvlcjni:
 * prepare the audio <=> video switch

Application:
 * Support background playback for video
 * Update close, playlist and save icons
 * Broadcast metadata to other apps, including scrobblers
 * New Advanced dialog for audio playback
 * Improve search look and accuracy
 * Fix double entries for external SD cards, notably LG G3, Tablet Shield
 * Fix Android 4.1 navigation bar
 * Fix focusability of repeat, shuffle and audio buttons
 * Fix shuffle button
 * Fix crashes and interface issues
 * Fix accessibility text on some buttons of the interface
 * Remove wheelview dependency

Translations:
 * Update of German, Simplified Chinese, Ukrainian, Tamil, Portuguese, Italian,
   Galician and Spanish translations


Changes between 1.2.5 and 1.2.6:
--------------------------------

Core:
 * Fix crash on startup with some iso files

Application:
 * Fix presentation mode
 * New audio material design icons
 * Fix gestures sensitivity
 * Improve memory management
 * Minor bug and crash fixes

TV:
 * Fix recommendation playback


Changes between 1.2.4 and 1.2.5:
--------------------------------

Application:
 * Fix audio stutter with some devices
 * Fix MPEG4 on some MTK devices (Wiko)
 * Fix crashes with some QCOM devices (Samsung Galaxy Tab 4, Galaxy S4/S5...)